update admin links

--- a/24T3/slides/public/admin/index.html
+++ b/24T3/slides/public/admin/index.html
@@ -19,7 +19,7 @@
 
     <section><h1 id="admin">admin</h1>
 <p>everything u need to know, hopefully</p>
-<p>slides are at <a href="tp.denzeliskandar.com/admin">tp.denzeliskandar.com/admin</a></p>
+<p>slides are at <a href="https://tp.denzeliskandar.com/admin">tp.denzeliskandar.com/admin</a></p>
 </section><section>
 
 
@@ -44,7 +44,7 @@
 </section><section>
 <h2 id="where-to-access-resources">where to access resources</h2>
 <ul>
-<li>code and slides will be at <a href="github.com/dzl-i/training-program">github.com/dzl-i/training-program</a></li>
+<li>code and slides will be at <a href="https://github.com/dzl-i/training-program">github.com/dzl-i/training-program</a></li>
 <li>this should be recorded and posted on yt maybe</li>
 </ul>
 </section><section>
@@ -107,7 +107,7 @@
 <ul>
 <li>very important</li>
 <li>we shall make smth cool 😎</li>
-<li>plz give project idea at <a href="https://forms.gle/VzSLTiGCNto2qE6W7">https://forms.gle/VzSLTiGCNto2qE6W7</a></li>
+<li>plz give project idea at <a href="https://forms.gle/VzSLTiGCNto2qE6W7">forms.gle/VzSLTiGCNto2qE6W7</a></li>
 <li>link is also in discord at #court-docket</li>
 </ul>
 
