--- a/24T3/slides/public/frontend/index.html
+++ b/24T3/slides/public/frontend/index.html
@@ -19,6 +19,13 @@
 
     <section><h1 id="frontend-development">Frontend Development</h1>
 <p>Next.js and TailwindCSS</p>
+</section><section>
+
+
+<section data-shortcode-section>
+<h2 id="why-nextjs">why nextjs</h2>
+
+</section>
 </section>
 
   
