add discord in admin

--- a/24T3/slides/public/admin/index.html
+++ b/24T3/slides/public/admin/index.html
@@ -32,7 +32,8 @@
 </section><section>
 <h2 id="how-to-contact-me">how to contact me</h2>
 <ul>
-<li><a href="">@babipanggangg</a> on Discord</li>
+<li><a href="">@.pandrr</a> on Discord - Chris</li>
+<li><a href="">@babipanggangg</a> on Discord - Denzel</li>
 </ul>
 </section><section>
 <h2 id="places-for-questionsdiscussion">places for questions/discussion</h2>
@@ -65,6 +66,17 @@
 <li>what do you wanna get out of the program?</li>
 <li>what has been your favourite course so far</li>
 </ul>
+
+</section>
+</section><section>
+
+
+<section data-shortcode-section>
+<h2 id="what-are-we-doing">what are we doing</h2>
+<p>what is this program about lol</p>
+</section><section>
+<h2 id="some-previous-projects">some previous projects</h2>
+<p><a href="https://devsoc.app/our-projects">devsoc.app/our-projects</a></p>
 
 </section>
 </section><section>
