--- a/24T3/slides/public/frontend/index.html
+++ b/24T3/slides/public/frontend/index.html
@@ -23,6 +23,13 @@
 
 
 <section data-shortcode-section>
+<p>slides are at <a href="https://tp.denzeliskandar.com/frontend">tp.denzeliskandar.com/frontend</a></p>
+
+</section>
+</section><section>
+
+
+<section data-shortcode-section>
 <h2 id="disclaimer">disclaimer</h2>
 <ul>
 <li>i am not an expert in nextjs or reactjs
