change frontend demo

--- a/24T3/slides/public/frontend/index.html
+++ b/24T3/slides/public/frontend/index.html
@@ -322,7 +322,13 @@ keep-alive: timeout=5
 
 <section data-shortcode-section>
 <h1 id="demo">demo</h1>
-<p>turning figma into reality</p>
+<p>making a registration page</p>
+</section><section>
+<h2 id="data-fetching">data fetching</h2>
+<p>try to send a request to one of my servers 🤭</p>
+<p>shameless plug incoming</p>
+<p><a href="https://api.encrypted.denzeliskandar.com/auth/register">https://api.encrypted.denzeliskandar.com/auth/register</a></p>
+<p>method: POST</p>
 
 </section>
 </section>
@@ -386,6 +392,9 @@ keep-alive: timeout=5
 
 
 
+
+  
+  
 
   
   
