--- a/24T3/slides/public/admin/index.html
+++ b/24T3/slides/public/admin/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head><script src="/24T3/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=24T3/livereload" data-no-instant defer></script>
     <meta charset="utf-8">
 <title>Training Program Admin</title>
 
 
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link rel="stylesheet" href="/reveal-js/dist/reset.css">
-<link rel="stylesheet" href="/reveal-js/dist/reveal.css"><link rel="stylesheet" href="/reveal-js/dist/theme/black.css" id="theme">
-<link rel="stylesheet" href="/highlight-js/default.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link rel="stylesheet" href="/24T3/reveal-js/dist/reset.css">
+<link rel="stylesheet" href="/24T3/reveal-js/dist/reveal.css"><link rel="stylesheet" href="/24T3/reveal-js/dist/theme/black.css" id="theme">
+<link rel="stylesheet" href="/24T3/highlight-js/default.min.css">
   </head>
   <body>
     
@@ -189,19 +189,19 @@
       
 
     </div>
-<script type="text/javascript" src=/reveal-hugo/object-assign.js></script>
+<script type="text/javascript" src=/24T3/reveal-hugo/object-assign.js></script>
 
 
-<script src="/reveal-js/dist/reveal.js"></script>
+<script src="/24T3/reveal-js/dist/reveal.js"></script>
 
 
-  <script type="text/javascript" src="/reveal-js/plugin/markdown/markdown.js"></script>
+  <script type="text/javascript" src="/24T3/reveal-js/plugin/markdown/markdown.js"></script>
   
-  <script type="text/javascript" src="/reveal-js/plugin/highlight/highlight.js"></script>
+  <script type="text/javascript" src="/24T3/reveal-js/plugin/highlight/highlight.js"></script>
   
-  <script type="text/javascript" src="/reveal-js/plugin/zoom/zoom.js"></script>
+  <script type="text/javascript" src="/24T3/reveal-js/plugin/zoom/zoom.js"></script>
   
-  <script type="text/javascript" src="/reveal-js/plugin/notes/notes.js"></script>
+  <script type="text/javascript" src="/24T3/reveal-js/plugin/notes/notes.js"></script>
   
 <script type="text/javascript">
   
