--- a/25T1/slides/public/database/index.html
+++ b/25T1/slides/public/database/index.html
@@ -23,7 +23,7 @@
 
 
 <section data-shortcode-section>
-<p>slides are at <a href="https://tp.denzeliskandar.com/database">tp.denzeliskandar.com/database</a></p>
+<p>slides are at <a href="https://tp.denzeliskandar.com/25T1/database">tp.denzeliskandar.com/database</a></p>
 
 </section>
 </section><section>
@@ -350,12 +350,6 @@ model Post {
 </span></span><span style="display:flex;"><span>        <span style="color:#a6e22e">id</span>: <span style="color:#66d9ef">patientId</span>
 </span></span><span style="display:flex;"><span>    },
 </span></span><span style="display:flex;"><span>    <span style="color:#a6e22e">data</span>: <span style="color:#66d9ef">patientData</span>,
-</span></span><span style="display:flex;"><span>    <span style="color:#a6e22e">include</span><span style="color:#f92672">:</span> {
-</span></span><span style="display:flex;"><span>        <span style="color:#a6e22e">genomicData</span>: <span style="color:#66d9ef">true</span>,
-</span></span><span style="display:flex;"><span>        <span style="color:#a6e22e">phenotypes</span>: <span style="color:#66d9ef">true</span>,
-</span></span><span style="display:flex;"><span>        <span style="color:#a6e22e">imagingData</span>: <span style="color:#66d9ef">true</span>,
-</span></span><span style="display:flex;"><span>        <span style="color:#a6e22e">signalData</span>: <span style="color:#66d9ef">true</span>,
-</span></span><span style="display:flex;"><span>    }
 </span></span><span style="display:flex;"><span>});
 </span></span></code></pre></div><p>prisma is smart enough to know what to update</p>
 </section><section>
